@@ -6,75 +6,135 @@
  */
 package com.powsybl.openloadflow.ac;
 
-import com.powsybl.math.matrix.MatrixFactory;
+import com.powsybl.openloadflow.OpenLoadFlowParameters;
 import com.powsybl.openloadflow.ac.equations.AcEquationSystemCreationParameters;
-import com.powsybl.openloadflow.ac.nr.NewtonRaphsonParameters;
 import com.powsybl.openloadflow.ac.outerloop.AcOuterLoop;
+import com.powsybl.openloadflow.ac.solver.AcSolverFactory;
+import com.powsybl.openloadflow.ac.solver.NewtonKrylovParameters;
+import com.powsybl.openloadflow.ac.solver.NewtonRaphsonFactory;
+import com.powsybl.openloadflow.ac.solver.NewtonRaphsonParameters;
 import com.powsybl.openloadflow.lf.AbstractLoadFlowParameters;
 import com.powsybl.openloadflow.network.LfNetworkParameters;
+import com.powsybl.openloadflow.network.util.UniformValueVoltageInitializer;
 import com.powsybl.openloadflow.network.util.VoltageInitializer;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
- * @author Geoffroy Jamgotchian <geoffroy.jamgotchian at rte-france.com>
+ * @author Geoffroy Jamgotchian {@literal <geoffroy.jamgotchian at rte-france.com>}
  */
-public class AcLoadFlowParameters extends AbstractLoadFlowParameters {
+public class AcLoadFlowParameters extends AbstractLoadFlowParameters<AcLoadFlowParameters> {
 
-    public static final int DEFAULT_MAX_OUTER_LOOP_ITERATIONS = 20;
+    private AcEquationSystemCreationParameters equationSystemCreationParameters = new AcEquationSystemCreationParameters();
 
-    private final AcEquationSystemCreationParameters equationSystemCreationParameters;
+    private NewtonRaphsonParameters newtonRaphsonParameters = new NewtonRaphsonParameters();
 
-    private final NewtonRaphsonParameters newtonRaphsonParameters;
+    private NewtonKrylovParameters newtonKrylovParameters = new NewtonKrylovParameters();
 
-    private final List<AcOuterLoop> outerLoops;
+    private List<AcOuterLoop> outerLoops = Collections.emptyList();
 
-    private final int maxOuterLoopIterations;
+    private int maxOuterLoopIterations = DEFAULT_MAX_OUTER_LOOP_ITERATIONS;
 
-    private VoltageInitializer voltageInitializer;
+    private VoltageInitializer voltageInitializer = new UniformValueVoltageInitializer();
 
-    private final boolean asymmetrical;
+    private boolean asymmetrical = LfNetworkParameters.ASYMMETRICAL_DEFAULT_VALUE;
 
-    public AcLoadFlowParameters(LfNetworkParameters networkParameters, AcEquationSystemCreationParameters equationSystemCreationParameters,
-                                NewtonRaphsonParameters newtonRaphsonParameters, List<AcOuterLoop> outerLoops, int maxOuterLoopIterations,
-                                MatrixFactory matrixFactory, VoltageInitializer voltageInitializer, boolean asymmetrical) {
-        super(networkParameters, matrixFactory);
-        this.equationSystemCreationParameters = Objects.requireNonNull(equationSystemCreationParameters);
-        this.newtonRaphsonParameters = Objects.requireNonNull(newtonRaphsonParameters);
-        this.outerLoops = Objects.requireNonNull(outerLoops);
-        this.maxOuterLoopIterations = maxOuterLoopIterations;
-        this.voltageInitializer = Objects.requireNonNull(voltageInitializer);
-        this.asymmetrical = asymmetrical;
-    }
+    private OpenLoadFlowParameters.SlackDistributionFailureBehavior slackDistributionFailureBehavior = OpenLoadFlowParameters.SlackDistributionFailureBehavior.LEAVE_ON_SLACK_BUS;
+
+    private AcSolverFactory solverFactory = new NewtonRaphsonFactory();
+
+    private boolean detailedReport = false;
 
     public AcEquationSystemCreationParameters getEquationSystemCreationParameters() {
         return equationSystemCreationParameters;
+    }
+
+    public AcLoadFlowParameters setEquationSystemCreationParameters(AcEquationSystemCreationParameters equationSystemCreationParameters) {
+        this.equationSystemCreationParameters = Objects.requireNonNull(equationSystemCreationParameters);
+        return this;
     }
 
     public NewtonRaphsonParameters getNewtonRaphsonParameters() {
         return newtonRaphsonParameters;
     }
 
+    public AcLoadFlowParameters setNewtonRaphsonParameters(NewtonRaphsonParameters newtonRaphsonParameters) {
+        this.newtonRaphsonParameters = Objects.requireNonNull(newtonRaphsonParameters);
+        return this;
+    }
+
+    public NewtonKrylovParameters getNewtonKrylovParameters() {
+        return newtonKrylovParameters;
+    }
+
+    public AcLoadFlowParameters setNewtonKrylovParameters(NewtonKrylovParameters newtonKrylovParameters) {
+        this.newtonKrylovParameters = Objects.requireNonNull(newtonKrylovParameters);
+        return this;
+    }
+
     public List<AcOuterLoop> getOuterLoops() {
         return outerLoops;
+    }
+
+    public AcLoadFlowParameters setOuterLoops(List<AcOuterLoop> outerLoops) {
+        this.outerLoops = Objects.requireNonNull(outerLoops);
+        return this;
     }
 
     public int getMaxOuterLoopIterations() {
         return maxOuterLoopIterations;
     }
 
+    public AcLoadFlowParameters setMaxOuterLoopIterations(int maxOuterLoopIterations) {
+        this.maxOuterLoopIterations = maxOuterLoopIterations;
+        return this;
+    }
+
     public VoltageInitializer getVoltageInitializer() {
         return voltageInitializer;
     }
 
-    public void setVoltageInitializer(VoltageInitializer voltageInitializer) {
+    public AcLoadFlowParameters setVoltageInitializer(VoltageInitializer voltageInitializer) {
         this.voltageInitializer = Objects.requireNonNull(voltageInitializer);
+        return this;
     }
 
     public boolean isAsymmetrical() {
         return asymmetrical;
+    }
+
+    public AcLoadFlowParameters setAsymmetrical(boolean asymmetrical) {
+        this.asymmetrical = asymmetrical;
+        return this;
+    }
+
+    public OpenLoadFlowParameters.SlackDistributionFailureBehavior getSlackDistributionFailureBehavior() {
+        return slackDistributionFailureBehavior;
+    }
+
+    public AcLoadFlowParameters setSlackDistributionFailureBehavior(OpenLoadFlowParameters.SlackDistributionFailureBehavior slackDistributionFailureBehavior) {
+        this.slackDistributionFailureBehavior = Objects.requireNonNull(slackDistributionFailureBehavior);
+        return this;
+    }
+
+    public AcSolverFactory getSolverFactory() {
+        return solverFactory;
+    }
+
+    public AcLoadFlowParameters setSolverFactory(AcSolverFactory solverFactory) {
+        this.solverFactory = Objects.requireNonNull(solverFactory);
+        return this;
+    }
+
+    public boolean isDetailedReport() {
+        return detailedReport;
+    }
+
+    public AcLoadFlowParameters setDetailedReport(boolean detailedReport) {
+        this.detailedReport = detailedReport;
+        return this;
     }
 
     @Override
@@ -83,11 +143,15 @@ public class AcLoadFlowParameters extends AbstractLoadFlowParameters {
                 "networkParameters=" + networkParameters +
                 ", equationSystemCreationParameters=" + equationSystemCreationParameters +
                 ", newtonRaphsonParameters=" + newtonRaphsonParameters +
-                ", outerLoops=" + outerLoops.stream().map(outerLoop -> outerLoop.getClass().getSimpleName()).collect(Collectors.toList()) +
+                ", newtonKrylovParameters=" + newtonKrylovParameters +
+                ", outerLoops=" + outerLoops.stream().map(outerLoop -> outerLoop.getClass().getSimpleName()).toList() +
                 ", maxOuterLoopIterations=" + maxOuterLoopIterations +
                 ", matrixFactory=" + matrixFactory.getClass().getSimpleName() +
                 ", voltageInitializer=" + voltageInitializer.getClass().getSimpleName() +
                 ", asymmetrical=" + asymmetrical +
+                ", slackDistributionFailureBehavior=" + slackDistributionFailureBehavior.name() +
+                ", solverFactory=" + solverFactory.getClass().getSimpleName() +
+                ", detailedReport=" + detailedReport +
                 ')';
     }
 }
